plugins {
    id 'java'
    id 'io.freefair.lombok' version '5.1.0'
    id 'com.github.johnrengelman.shadow' version '5.2.0'
}

sourceCompatibility = 14
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}
sourceSets.main.java.srcDirs = [ "src/" ]

jar {
    project.version="" // to remove version number from the built jar's name
    manifest {
        attributes 'Main-Class': 'com.marvelousbob.server.ServerInit'
    }
}

//repositories {
//    mavenCentral()
//}
//dependencies {
//    testImplementation group: 'junit', name: 'junit', version: '4.12'
//}
//test {
//    useJUnitPlatform()
//}